# VMToolkit_pjk

./: .gitignore  CMakeLists.txt  README.md  run_hexagonal.py.lprof  setup.py
VMToolkit/VM/src/: CMakeLists.txt  base_property.hpp  box.cpp  box.hpp  class_factory.hpp  constrainer.hpp  dump.cpp  dump.hpp  force.hpp  force_area.cpp  force_area.hpp  force_compute.cpp  force_compute.hpp  force_const_vertex_propulsion.cpp  force_const_vertex_propulsion.hpp  force_efield_on_cell_boundary.cpp  force_efield_on_cell_boundary.hpp  force_perimeter.cpp  force_perimeter.hpp  force_self_propulsion.cpp  force_self_propulsion.hpp  integrate.cpp  integrate.hpp  integrator.hpp  integrator_brownian.cpp  integrator_brownian.hpp  integrator_euler.cpp  integrator_euler.hpp  integrator_runge_kutta.cpp  integrator_runge_kutta.hpp  matrix.cpp  matrix.hpp  mesh.cpp  mesh.hpp  polygon_zone.cpp  polygon_zone.hpp  property.hpp  rng.cpp  rng.hpp  simulation.cpp  (+10 more)
VMToolkit/VM/src/constrainers/: constrainer.hpp  constraint_manager.hpp
VMToolkit/VM/src/forces/: force.hpp  force_area.cpp  force_area.hpp  force_const_vertex_propulsion.cpp  force_const_vertex_propulsion.hpp  force_efield_on_cell_boundary.cpp  force_efield_on_cell_boundary.hpp  force_efield_on_cell_boundary_pixelated.cpp  force_efield_on_cell_boundary_pixelated.hpp  force_efield_on_cell_boundary_uniform.cpp  force_efield_on_cell_boundary_uniform.hpp  force_efield_on_cellbound_pixelated.cpp  force_efield_on_cellbound_pixelated.hpp  force_perimeter.cpp  force_perimeter.hpp  new_force_efield_on_cell_boundary_pixelated.cpp  polygon_zone.cpp  (+4 more)
(+95 files in other folders)
